Added run-bridge caveat for Mac OS X.
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@15 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/README
+++ b/README
@@ -49,6 +49,13 @@ To run the voice bridge, from <bridge_dir> run:
 
 $ ant run-bridge
 
+   ** NOTE (Mac OS X only):
+   If you're running the JDK 1.6 Developer Preview release, you'll need to comment out the following lines from 
+   <bridge_dir>/dist/bridge/run.xml:
+
+            <!--jvmarg value="-XX:+UseParNewGC"/-->
+            <!--jvmarg value="-XX:+UseConcMarkSweepGC"/-->
+
 This will start up the voice bridge on the local host, port 5060.  To change the port the bridge runs on, you can create a file called "my.build.properties" in <bridge_dir> and add the following line:
 
 bridge.sip.port=xxx
