Update README.  Copy powerpc and intel native libraries.
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/trunk@147 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/softphone/audioframework/coreaudio/README
+++ b/softphone/audioframework/coreaudio/README
@@ -3,5 +3,8 @@ This library contains the native code for Mac Core Audio use by java.
 
 To build the library:
 
+You must install Apple Xcode tools in order to have the Core Audio header
+files!
+
 	- build the softphone
 	- Then on a Mac (you must run this on a Mac!) type ./build.sh.
