Support for 64-bit linux.
git-svn-id: https://svn.java.net/svn/jvoicebridge~svn/branches/jp@301 45c97d41-3a3b-0410-9611-e53bcf13ea59

--- a/softphone/audioframework/alsa32/README
+++ b/softphone/audioframework/alsa32/README
@@ -8,7 +8,7 @@ sudo apt-get install libasound2-dev.
 To build the library:
 
 	- build the softphone
-	- Then on a Linux machine (you must run this on a Linux system!) type ./build.sh.
+	- Then on a Linux machine (you must run this on a Linux 32-bit system!) type ./build.sh.
 
 
 NOTE:  ON 5/18/2007 I modified /usr/include/jni.h to include linux/jni_md.h.
