--- a/README
+++ b/README
@@ -13,7 +13,7 @@ This fork should solve some problem with the audio communication between Softpho
 This project is currently my bachelor work and after that, the JVoiceBridge should be more usable for the my school (Lucerne University of Applied Sciences and Arts).
 The exactly problems can be read in chapter 1.
 
-I used the jp branch and created a new branch called ku5ard
+I used the jp branch and created a new branch called bda
 
 == Contens ==
 0. Credits
